--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body{
     border-radius: 36px;
     box-shadow: 10px 10px 20px 0 rgba(0, 0, 0, 0.5);
     width: 26%;
-    height: 80%;
+    height: 85%;
     margin: 0%;
     padding: 0;
     
@@ -38,7 +38,7 @@ body{
     /* border: 1px solid white; */
     height: 10vmin;
     width: 94%;
-    margin:4vmin 0 3vmin 0;
+    margin:2vmin 0 3vmin 0;
     
     display: flex;
     text-align: end;
@@ -47,7 +47,23 @@ body{
     align-self: left;
     font-size:4vmin;
     overflow: hidden;
+    color: ;
 
+}
+.solve-after
+{
+    /* height: 10vmin;
+    width: 94%;
+    margin:2vmin 0 3vmin 0;
+    
+    display: flex;
+    text-align: end;
+    justify-content:end;
+    align-items:center;
+    align-self: left;
+    font-size:4vmin;
+    overflow: hidden; */
+    color: #3F5E5A;
 }
 #solve::after {
     content: "|"; /* The cursor symbol */
@@ -91,8 +107,41 @@ body{
     
 
 }
+.btn-after
+{
+    height:10vmin;
+    width: 10vmin;
+    background-color:#3F5E5A;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    box-shadow: 0px 0px 20px 0px #20FC8F;
+    -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+    
+
+}
 .btn:hover
 {
     box-shadow: 5px 5px 20px 0px #1a1a1a;
     cursor: pointer;
+}
+
+#theme
+{
+ margin:2vmin 3vmin 0 0;
+ /* border: 1px solid #20FC8F; */
+ width: 5vmin;
+ height: 5vmin;
+ border-radius: 50%;
+ align-self:end;
+ background-color: white;
+ cursor: pointer;
+ border:0;
+
 }
